Fixed #50, improved some whitespace

--- a/assets/less/mixins.less
+++ b/assets/less/mixins.less
@@ -233,6 +233,23 @@
 	}
   
 }
+.animate-this(@what: all, @time: 0.5s, @ease: ease-in-out) {
+/**
+ * @mixin Selection
+ */
+
+.selection(@background-color, @text-color) {
+
+	::-moz-selection {
+		background: @background-color;
+		color: @text-color;
+	}
+
+	::selection {
+		background: @background-color;
+		color: @text-color;
+	}
+}
 
 /**
  * @mixin Sprites
